[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/vhs_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://materials/crt.material" type="Material" id=3]
[ext_resource path="res://images/play_triangle.png" type="Texture" id=4]

[node name="Menu" type="Spatial"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 680.0
margin_bottom = 512.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueBackground" type="ColorRect" parent="."]
margin_left = 20.0
margin_top = 15.0
margin_right = 660.0
margin_bottom = 495.0
color = Color( 0, 0, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="RichTextLabel" parent="."]
margin_left = 40.0
margin_top = 47.0
margin_right = 656.0
margin_bottom = 87.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "R00000"
text = "R00000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectionLabel" type="RichTextLabel" parent="."]
margin_left = 20.0
margin_top = 47.0
margin_right = 636.0
margin_bottom = 347.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[right]PLAY   [/right]
[right]EJECT  [/right]"
text = "PLAY   
EJECT  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="TextureRect" parent="."]
margin_left = 620.0
margin_top = 47.0
margin_right = 660.0
margin_bottom = 87.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrtCurtain" type="ColorRect" parent="."]
material = ExtResource( 3 )
margin_left = 20.0
margin_top = 15.0
margin_right = 660.0
margin_bottom = 495.0
__meta__ = {
"_edit_use_anchors_": false
}
